# synth

./: .gitignore  flake.nix
core/: Cargo.toml
core/src/graph/: boolean.rs  date_time.rs  mod.rs  number.rs  object.rs  prelude.rs  series.rs
core/src/graph/string/: faker.rs  uuid.rs
core/src/schema/content/: categorical.rs  object.rs  prelude.rs
nix/common/: args.nix  artifacts.nix  crane-lib.nix  default.nix  docker.nix  rust-toolchain.nix
nix/dev/: checks.nix  default.nix  flake.nix  formatter.nix  pre-commit.nix  shell.nix
synth/: Cargo.toml
synth/benches/: bench.rs
synth/src/: main.rs  sampler.rs  utils.rs
synth/src/cli/: export.rs  import_utils.rs  mod.rs  mongo.rs
synth/src/datasource/: mysql_datasource.rs  postgres_datasource.rs  relational_datasource.rs
synth/tests/: docs.rs  examples.rs
test_macros/: Cargo.toml
tools/: minimize_features.py
