[package]
name = "synth-core"
version = "0.6.3"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>",
  "Andre Bogus <andre@getsynth.com>"
]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
env_logger = "0.11.9"
tempfile = "3.1.0"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
lazy_static = "1.4.0"
anyhow = "1.0.32"
log = "0.4.11"
num_cpus = "1.0"
regex = "1.3.9"
chrono = { version = "0.4.18", features = ["serde"] }
num = { version = "0.4.0", features = [ "rand" ] }
synth-gen = { path = "../gen", features = [ "shared" ] }
bimap = { version = "0.6.0", features = [ "std" ] }
humantime-serde = "1.0.1"
dynfmt = { version = "0.1.5", features = [ "curly" ] }
uriparse = "0.6.3"
paste = "1.0"
strsim = "0.11.1"
rand = "0.9.2"
bincode = "1.3.3"
rand_regex = "0.18.1"
bloomfilter = "3.0.1"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "rust_decimal", "chrono"] }
uuid = { version = "1.21.0", features = ["v4"] }
fake = { version = "4.4.0", features = ["http", "random_color"] }
