[package]
name = "synth"
version = "0.7.0"
authors = [
  "Damien Broka <damien@getsynth.com>",
  "Christos Hadjiaslanis <christos@getsynth.com>",
  "Andre Bogus <andre@getsynth.com>"
]
edition = "2021"
homepage = "https://getsynth.com"
license = "Apache-2.0"
exclude = ["testing_harness/*", "tmp"]

[[bench]]
name = "bench"
harness = false

[features]
default = []
telemetry = ["posthog-unofficial", "uuid", "backtrace", "console"]

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.1.0"
iai = "0.1"
paste = "1.0"
test_macros = { path = "../test_macros" }

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Telemetry related dependencies
uuid = { version = "1.21.0", default-features = false, features = ["v4"], optional = true }
posthog-unofficial = { version = "0.2.3", default-features = false, optional = true }
backtrace = { version = "0.3", default-features = false, optional = true }
console = { version = "0.16.2", default-features = false, optional = true }

# owo-colors = "3"
anyhow = "1.0.32"

structopt = "0.3.18"

log = "0.4.18"

num_cpus = "1.0"

async-trait = "0.1.50"
futures = "0.3.15"
smol = "2.0.0"

fs2 = "0.4.3"

chrono = { version = "0.4.18", features = ["serde"] }
regex = "1.3.9"

synth-core = { path = "../core" }
synth-gen = { path = "../gen" }

rust_decimal = "1.10.3"

beau_collector = "0.2.1"


semver = "1.0.4"

uriparse = "0.6.3"
querystring = "1.1.0"

csv = "1.1.6"
env_logger = "0.11.9"
sysinfo = "0.38.2"
strsim = "0.11.1"
rand = "0.9.2"
ctrlc = { version = "3.5.2", features = ["termination"] }
indicatif = "0.18.4"
dirs = "6.0.0"
mongodb = { version = "3.5.1", default-features = false, features = ["sync", "rustls-tls", "bson-3", "compat-3-3-0"] }
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "rust_decimal"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
